--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Leipzig Summer School, Day 5"
+title: "Leipzig Summer School, Day 5 Viromics"
 
 # Life cycle stage of the lesson
 # See this page for more details: https://cdh.carpentries.org/the-lesson-life-cycle.html
 # Possible values: "pre-alpha", "alpha", "beta", "stable"
-life_cycle: "stable"
+life_cycle: "pre-alpha"
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
