--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ title: "Leipzig Summer School, Day 5 Viromics"
 # Life cycle stage of the lesson
 # See this page for more details: https://cdh.carpentries.org/the-lesson-life-cycle.html
 # Possible values: "pre-alpha", "alpha", "beta", "stable"
-life_cycle: "pre-alpha"
+life_cycle: "stable"
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
@@ -48,7 +48,7 @@ email: "team@carpentries.org"
 # template_repo: "https://github.com/carpentries/styles"
 # training_site: "https://carpentries.github.io/instructor-training"
 workshop_repo: "https://github.com/VirJenDB/2024-07-12-leipzig-viromics-workshop"
-workshop_site: "https://VirJenDB.github.io/2024-07-12-leipzig-viromics-workshop/"
+workshop_site: "https://VirJenDB.github.io/2024-07-12-leipzig-viromics-workshop"
 # cc_by_human: "https://creativecommons.org/licenses/by/4.0/"
 
 # Surveys.
