--- a/rawfiles/workshop-day5.yml
+++ b/rawfiles/workshop-day5.yml
@@ -7,12 +7,23 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - alsa-lib=1.2.11=hd590300_1
+  - _r-mutex=1.0.1=anacondar_1
+  - _sysroot_linux-64_curr_repodata_hack=3=h69a702a_16
+  - bedtools=2.31.1=hf5e1c6e_2
+  - binutils_impl_linux-64=2.40=ha1999f0_7
+  - biopython=1.84=py312h9a8786e_0
+  - blast=2.5.0=hc0b0e79_3
+  - boost=1.85.0=h9cebb41_2
+  - bowtie2=2.5.4=he20e202_2
+  - bwa=0.7.18=he4a0461_0
+  - bwidget=1.9.14=ha770c72_1
   - bzip2=1.0.8=hd590300_5
   - c-ares=1.32.0=h4ab18f5_0
   - ca-certificates=2024.7.4=hbcca054_0
   - cairo=1.18.0=h3faef2a_0
+  - checkv=0.7.0=py_1
   - curl=8.8.0=he654da7_1
+  - diamond=0.9.10=0
   - expat=2.6.2=h59595ed_0
   - fastp=0.23.4=h125f33a_4
   - fastqc=0.12.1=hdfd78af_0
@@ -23,38 +34,65 @@ dependencies:
   - fontconfig=2.14.2=h14ed4e7_0
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
+  - fraggenescan=1.31=h031d066_7
   - freetype=2.12.1=h267a509_2
+  - fribidi=1.0.10=h36c2ea0_0
+  - gcc_impl_linux-64=14.1.0=h3c94d91_0
   - gettext=0.22.5=h59595ed_2
   - gettext-tools=0.22.5=h59595ed_2
-  - giflib=5.2.2=hd590300_0
+  - gfortran_impl_linux-64=14.1.0=he4a1faa_0
   - graphite2=1.3.13=h59595ed_1003
-  - harfbuzz=8.5.0=hfac3d4d_0
+  - gsl=2.7=he838d99_0
+  - gxx_impl_linux-64=14.1.0=h2879b86_0
+  - harfbuzz=9.0.0=hfac3d4d_0
+  - hmmer=3.4=hdbdd923_1
+  - htslib=1.20=h5efdd21_2
   - icu=73.2=h59595ed_0
+  - idba=1.1.3=1
+  - importlib-metadata=8.0.0=pyha770c72_0
   - isa-l=2.31.0=hd590300_1
+  - kernel-headers_linux-64=3.10.0=h4a8ded7_16
   - keyutils=1.6.1=h166bdaf_0
   - krb5=1.21.3=h659f571_0
-  - lcms2=2.16=hb7c19ff_0
+  - ld_impl_linux-64=2.40=hf3520f5_7
   - lerc=4.0.0=h27087fc_0
   - libasprintf=0.22.5=h661eb56_2
   - libasprintf-devel=0.22.5=h661eb56_2
-  - libcups=2.3.3=h4637d8d_4
+  - libblas=3.9.0=22_linux64_openblas
+  - libboost=1.85.0=hba137d9_2
+  - libboost-devel=1.85.0=h00ab1b0_2
+  - libboost-headers=1.85.0=ha770c72_2
+  - libboost-python=1.85.0=py312h389efb2_2
+  - libboost-python-devel=1.85.0=py312h9cebb41_2
+  - libcblas=3.9.0=22_linux64_openblas
   - libcurl=8.8.0=hca28451_1
   - libdeflate=1.20=hd590300_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=hd590300_2
   - libexpat=2.6.2=h59595ed_0
   - libffi=3.4.2=h7f98852_5
+  - libgcc=7.2.0=h69d50b8_2
+  - libgcc-devel_linux-64=14.1.0=h5d3d1c9_100
   - libgcc-ng=14.1.0=h77fa898_0
   - libgettextpo=0.22.5=h59595ed_2
   - libgettextpo-devel=0.22.5=h59595ed_2
+  - libgfortran-ng=14.1.0=h69a702a_0
+  - libgfortran5=14.1.0=hc5f4f2c_0
   - libglib=2.80.2=hf974151_0
   - libgomp=14.1.0=h77fa898_0
+  - libhwloc=2.11.0=default_h5622ce7_1000
   - libiconv=1.17=hd590300_2
   - libidn2=2.3.7=hd590300_0
   - libjpeg-turbo=3.0.0=hd590300_1
+  - liblapack=3.9.0=22_linux64_openblas
   - libnghttp2=1.58.0=h47da74e_1
+  - libnsl=2.0.1=hd590300_0
+  - libopenblas=0.3.27=pthreads_hac2b453_1
   - libpng=1.6.43=h2797004_0
+  - libsanitizer=14.1.0=hcba0ae0_0
+  - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.0=h0841786_0
+  - libstdcxx-devel_linux-64=14.1.0=h5d3d1c9_100
   - libstdcxx-ng=14.1.0=hc0a3c3a_0
   - libtiff=4.6.0=h1dd3fc0_3
   - libunistring=0.9.10=h7f98852_0
@@ -62,19 +100,48 @@ dependencies:
   - libwebp-base=1.4.0=hd590300_0
   - libxcb=1.15=h0b41bf4_0
   - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.12.7=hc051c1a_1
   - libzlib=1.2.13=h4ab18f5_6
+  - make=4.3=hd18ef5c_1
+  - maxbin2=2.2.7=hdbdd923_5
   - ncurses=6.5=h59595ed_0
-  - openjdk=22.0.1=hb622114_0
+  - numpy=2.0.0=py312h22e1c76_0
+  - openjdk=11.0.1=h516909a_1016
   - openssl=3.3.1=h4ab18f5_1
+  - pango=1.54.0=h4c5309f_1
   - pcre2=10.43=hcad00b1_0
-  - perl=5.32.1=7_hd590300_perl5
+  - perl=5.26.2=h36c2ea0_1008
+  - perl-encode=2.88=pl526_1
+  - perl-encode-locale=1.05=pl526_6
+  - perl-exporter=5.72=pl526_1
+  - perl-lwp-simple=6.15=pl526h470a237_4
+  - perl-parent=0.236=pl526_1
+  - pip=24.0=pyhd8ed1ab_0
   - pixman=0.43.2=h59595ed_0
+  - prodigal=2.6.3=h031d066_9
+  - psutil=6.0.0=py312h9a8786e_0
   - pthread-stubs=0.4=h36c2ea0_1001
+  - python=3.12.3=hab00c5b_0_cpython
+  - python_abi=3.12=4_cp312
+  - r-base=4.4.0=h019f4a6_1
+  - r-bitops=1.0_7=r44hb1dbf0f_3
+  - r-catools=1.18.2=r44ha18555a_3
+  - r-gplots=3.1.3.1=r44hc72bb7e_1
+  - r-gtools=3.9.5=r44hb1dbf0f_1
+  - r-kernsmooth=2.23_24=r44hc2011d3_1
+  - readline=8.2=h8228510_1
+  - samtools=1.20=h50ea8bc_1
+  - sed=4.8=he412f7d_0
   - seqtk=1.4=he4a0461_2
-  - unzip=6.0=h7f98852_3
+  - setuptools=70.2.0=pyhd8ed1ab_0
+  - sysroot_linux-64=2.17=h4a8ded7_16
+  - tar=1.34=hb2e2bae_1
+  - tbb=2021.12.0=h434a139_2
+  - tk=8.6.13=noxft_h4845f30_101
+  - tktable=2.10=h8bc8fbc_6
+  - tzdata=2024a=h0c530f3_0
   - wget=1.21.4=h251f7ec_1
-  - xorg-fixesproto=5.0=h7f98852_1002
-  - xorg-inputproto=2.3.2=h7f98852_1002
+  - wheel=0.43.0=pyhd8ed1ab_1
   - xorg-kbproto=1.0.7=h7f98852_1002
   - xorg-libice=1.1.1=hd590300_0
   - xorg-libsm=1.2.4=h7391055_0
@@ -82,16 +149,13 @@ dependencies:
   - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxfixes=5.0.3=h7f98852_1004
-  - xorg-libxi=1.7.10=h7f98852_0
   - xorg-libxrender=0.9.11=hd590300_0
   - xorg-libxt=1.3.0=hd590300_1
-  - xorg-libxtst=1.2.3=h7f98852_1002
-  - xorg-recordproto=1.14.2=h7f98852_1002
   - xorg-renderproto=0.11.1=h7f98852_1002
   - xorg-xextproto=7.3.0=h0b41bf4_1003
   - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.6=h166bdaf_0
+  - zipp=3.19.2=pyhd8ed1ab_0
   - zlib=1.2.13=h4ab18f5_6
   - zstd=1.5.6=ha6fb4c9_0
-prefix: /home/me73peh/miniconda3/envs/workshop-day5
+prefix: /home/me73peh/project/miniconda3/envs/workshop-day5
